unpackaged/main/default/objects/csmrgp__Duplicate_Group__c/fields/csmrgp__Created_by_Batch_Job__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Created_by_Batch_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by Batch Job</label>
    <type>Checkbox</type>
</CustomField>