unpackaged/main/default/objects/csmrgp__Duplicate_Group__c/fields/csmrgp__Duplicate_Case_Count__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Duplicate_Case_Count__c</fullName>
    <description>Count of Duplicate Cases within a Duplicate Group.</description>
    <label>Duplicate Case Count</label>
    <summaryForeignKey>csmrgp__Duplicate_Case__c.csmrgp__Duplicate_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>