unpackaged/main/default/objects/csmrgp__Duplicate_Group__c/fields/csmrgp__Group_Count__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Group_Count__c</fullName>
    <description>For counting groups in reports. See http://help.salesforce.com/apex/HTViewSolution?id=000182022 for details.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>