unpackaged/main/default/objects/csmrgp__Duplicate_Group__c/fields/csmrgp__Initial_Case_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Initial_Case_Created_Date__c</fullName>
    <description>Earliest created date for related cases used analytics.</description>
    <inlineHelpText>Earliest created date for related cases used analytics.</inlineHelpText>
    <label>Initial Case Created Date</label>
    <summarizedField>csmrgp__Duplicate_Case__c.csmrgp__Case_Created_Date__c</summarizedField>
    <summaryForeignKey>csmrgp__Duplicate_Case__c.csmrgp__Duplicate_Group__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>