unpackaged/main/default/objects/csmrgp__Duplicate_Group__c/listViews/csmrgp__Last_30_Days.listView-meta.xml
<ListView>
    <fullName>csmrgp__Last_30_Days</fullName>
    <columns>NAME</columns>
    <columns>csmrgp__Duplicate_Case_Count__c</columns>
    <columns>csmrgp__Created_by_Batch_Job__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Last 30 Days</label>
</ListView>